<resources>
    <string name="app_name">Swedish Keyboard: Voice Input</string>
    <string name="enable_keyboard">Enable Keyboard</string>
    <string name="select_keyboard">Select Keyboard</string>
    <string name="input_method">input_method</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="ime_name_preferences">Keyboard Settings</string>
    <string name="general">General Keyboard settings</string>

    <string name="show_prediction">Display suggested words while typing.</string>
    <string name="prediction">Prediction</string>
    <string name="vibrate_on_keys">Vibrate on a key when touched.</string>
    <string name="vibrator">vibrator</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound">Sound</string>
    <string name="sound_on_keys">Sound on a key when touched.</string>
    <string name="eng_ime">abc</string>
    <string name="label_english">abc</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="word_separators"> .,;:!?\10()[]*&amp;@{}/_+=|</string>
    <string name="label_caps">ENG</string>
    <string name="audio">audio</string>
    <string name="try_it_out">Try it out</string>
    <string name="type_here">Type Here</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="share">Share</string>
    <string name="how_to_use">How to Use</string>
    <string name="themes">Themes</string>
    <string name="show_borders">Show Borders</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="exit">Exit</string>
    <string name="swedish">Swedish </string>
    <string name="keyboard">Keyboard</string>
    <string name="enable">Enable</string>
    <string name="select">Select</string>
    <string name="rate_us">Rate us</string>
    <string name="more_applications">More Applications</string>
    <string name="translate">Translate</string>
    <string name="download">Download</string>
    <string name="translation_is_not_downloaded">Translation is not downloaded.</string>
    <string name="swedish_">Svenska</string>
    <string name="screen_name">Screen name</string>
    <string name="on_key_press_sound">On key press sound</string>
    <string name="suggestion_while_typing">Suggestions while typing</string>
    <string name="vibration">On key press vibration</string>
    <string name="more_apps">More Applications</string>
    <string name="all_done">All Done</string>
    <string name="keyboard_is_selected_and_enabled_nnow_enjoy_swedish_keyboard">Keyboard is selected and enabled.\nNow enjoy Swedish keyboard</string>
    <string name="for_selection_of_multiple_themes_nfor_more_settings">For selection of multiple themes.\nFor more settings.</string>
    <string name="keyboard_size">Keyboard Size:</string>
    <string name="large">Large</string>
    <string name="normal">Normal</string>


</resources>