<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splashscreen"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toTopOf="@id/ll"
        android:layout_marginBottom="@dimen/fab_padding"
        android:elevation="@dimen/_32sdp"
        android:background="@drawable/bg_ic_splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_splash" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swedish"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/btnStart"
        android:layout_width="168dp"
        android:layout_height="60dp"
        android:text="@string/start"
        android:gravity="center"
        android:elevation="@dimen/extra_padding"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/extra_padding"
        android:background="@drawable/bg_main_less_rounded"
        android:paddingHorizontal="@dimen/extra_padding"
        android:paddingVertical="@dimen/fab_padding"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/ll" />
</androidx.constraintlayout.widget.ConstraintLayout>