<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllDoneActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animDone"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/done" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/animDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/all_done" />
    <TextView
        android:id="@+id/tvKbSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/fab_padding"
        android:textColor="@color/gray_600"
        android:visibility="invisible"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/keyboard_is_selected_and_enabled_nnow_enjoy_swedish_keyboard" />

    <TextView
        android:id="@+id/tvThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/extra_padding"
        android:textColor="@color/gray_600"
        android:visibility="invisible"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btnLetsGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/for_selection_of_multiple_themes_nfor_more_settings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnLetsGo"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/bg_main_less_rounded"
        android:elevation="@dimen/extra_padding"
        android:visibility="invisible"
        android:paddingHorizontal="@dimen/fab_padding"
        android:paddingVertical="@dimen/extra_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Let's Go"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>